# polyglot-dtp

./: .env.example  .example.env  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  COPYRIGHT  README.md  biome.json  compose.yaml  justfile  pyproject.toml  ruff.toml  setup.sh
data-store/influx/: README.md  compose.include.yaml  dt.component.yaml
data-store/neo4j/: compose.include.yaml  dt.component.yaml
data-store/postgres/: Dockerfile  README.md  compose.include.yaml  dt.component.yaml
data-store/postgres/init/: events.sql
data-store/postgres/phppgadmin/: config.inc.php
dev-docs/: README.md  mkdocs.yml  pyproject.toml
dev-docs/docs/: index.md  package-management.md
dev-docs/docs/arch/: central-datastore.md  iot.md  overview.md  reverse-proxy.md
dev-docs/docs/assets/stylesheets/: extra.css
dev-docs/docs/cntr/: argo-workflows.md  compose.md  k8s.md
dev-docs/docs/vscode/: extensions.md  getting-started.md  git.md
infra/influx/: compose.include.yaml  infra.yaml
infra/mqtt/: README.md  compose.include.yaml  dt.component.yaml  mosquitto.conf
infra/neo4j/: compose.include.yaml  infra.yaml
infra/phppgadmin/: compose.include.yaml  phppgadmin.conf
infra/phppgadmin/init/: timescale.sql
infra/postgres/: Dockerfile  compose.include.yaml  infra.yaml
infra/postgres/init/: events.sql
infra/postgres/phppgadmin/: config.inc.php  phppgadmin.conf
infra/traefik/: README.md  dt.component.yaml  dynamic.yml  infra.yaml  traefik.yml
misc/: README.md
misc/test_api/: compose.include.yaml  dt.component.yaml
pypackages/example_mqtt/: README.md  pyproject.toml
pypackages/example_mqtt/src/example_mqtt/: __init__.py
pypackages/mock_sensor/: Dockerfile  README.md  example.sensor.yaml  mock_sensor_test.py  mqtt.example.env  pyproject.toml  run.py
pypackages/mock_sensor/src/mock_sensor/: __init__.py  config.py  sensor.py
pypackages/test_api/: Dockerfile  pyproject.toml
pypackages/test_api/src/polyglot_dtp/test_api/: __init__.py
pypackages/twins_test/: .Dockerignore  Dockerfile  README.md  compose.include.yaml  launch.sh  pyproject.toml
pypackages/twins_test/src/polyglot_dtp/twins/test/: __init__.py
pytests/: README.md  pyproject.toml  test_dt_yaml.py  test_hello.py  test_influx.py  test_infra_yaml.py  test_neo4j.py  test_pg_timescale.py
scripts/: install_docker.sh
twins/mock-sensor-1/: README.md  compose.include.yaml  compose.yaml  dt.component.yaml  sensor.yaml
